--- a/teamvault/static/scss/circularProgressbar.scss
+++ b/teamvault/static/scss/circularProgressbar.scss
@@ -12,7 +12,6 @@ $max_progress: 30;
 }
 
 #countdown-number {
-  color: black;
   font-family: monospace;
   line-height: 40px;
   display: inline-block;
